<resources>
    <string name="app_name">Read-A-Lot</string>
    <string name="explanation">The goal is to guess as many book titles as you can after reading the book plot. You can start immediately or choose a genre</string>
    <string name="go">Go!</string>
    <string name="logo">Shows the logo</string>
    <string name="high_score">High Score</string>
    <string name="genre">Pick Genre</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="scifi">Sci-Fi</string>
    <string name="romance">Romance</string>
    <string name="book_titles">A Tale of Two Cities, Charles Dickens= Fellowship of the ring,  J.R.R. Tolkien=
        The two towers,  J.R.R. Tolkien= The return of the king,  J.R.R. Tolkien=
        The Little Prince,  Antoine de Saint-Exupéry= The Hobbit,  J.R.R. Tolkien=
        The Dream of the Red Chamber,  Cao Xueqin= And Then There Were None, Agatha Christie=
        The Lion the Witch and the Wardrobe,  C.S. Lewis= She,  H. Rider Haggard= The Da Vinci Code,  Dan Brown=
        Think and Grow Rich,  Napoleon Hill= The Catcher in the Rye,  J.D. Salinger= The Alchemist,  Paulo Coelho=
        Steps to Christ,  Ellen G. White= Lolita,  Vladimir Nabokov= Heidi,  Johanna Spyri=
        Baby and Child Care,  Benjamin Spock= Anne of Green Gables,  L.M. Montgomery= Black Beauty,  Anna Sewell=
        The Name of the Rose,  Umberto Eco= The Eagle Has Landed,  Jack Higgins= Watership Down,  Richard Adams=
        The Hite Report,  Shere Hite= Charlotte’s Web,  E.B. White= The Ginger Man,  J. P. Donleavy=
        The Tale of Peter Rabbit,  Beatrix Potter= Harry Potter and the Deathly Hallows,  J.K. Rowling=
        Harry potter and the goblet of fire,  J.K. Rowling= Jonathan Livingston Seagull,  Richard Bach=
        A Message to Garcia,  Elbert Hubbard= Sophie\'s World,  Jostein Gaarder= Angels and Demons,  Dan Brown=
        War and Peace,  Leo Tolstoy= Pinocchio,  Carlo Collodi= You Can Heal Your Life,  Louise L. Hay=
        Kane and Abel,  Jeffrey Archer= The Diary of a Young Girl,  Anne Frank= In His Steps,  Charles M. Sheldon=
        To Kill a Mockingbird,  Harper Lee= Valley of the Dolls,  Jacqueline Susann=
        Gone with the Wind,  Margaret Mitchell= One Hundred Years of Solitude,  Gabriel García Márquez=
        The Thorn Birds,  Colleen McCullough= The Revolt of Mamie Stover,  William Bradford Huie=
        The Girl with the Dragon Tattoo,  Stieg Larsson= The Very Hungry Caterpillar,  Eric Carle=
        The Late Great Planet Earth,  Hal Lindsey= Who Moved My Cheese,  Spencer Johnson=
        The Wind in the Willows,  Kenneth Grahame= 1984,  George Orwell=
        The 7 Habits of Highly Effective People: Powerful Lessons in Personal Change,  Stephen R. Covey=
        The Celestine Prophecy,  James Redfield= The Hunger Games,  Suzanne Collins= The Godfather,  Mario Puzo=
        Love Story,  Erich Segal= Wolf Totem,  Jiang Rong= Love You Forever,  Robert Munsch=
        The Women\'s Room,  Marilyn French= What to Expect When You\'re Expecting,  Heidi Murkoff=
        The Adventures of Huckleberry Finn,  Mark Twain= The Secret Diary of Adrian Mole Aged 13 3/4,  Sue Townsend=
        Where the Wild Things Are,  Maurice Sendak= Fear of Flying,  Erica Jong= The Shack,  William Paul Young=
        Goodnight Moon,  Margaret Wise Brown= The Neverending Story,  Michael Ende=
        Guess How Much I Love You,  Sam McBratney= Shōgun,  James Clavell=
        The Poky Little Puppy,  Janette Sebring Lowrey= The Pillars of the Earth,  Ken Follett=
        How to Win Friends and Influence People,  Dale Carnegie= Perfume: The Story of a Murderer,  Patrick Süskind=
        The Grapes of Wrath,  John Steinbeck= The Horse Whisperer,  Nicholas Evans=
        The Shadow of the Wind,  Carlos Ruiz Zafon= The Hitchhiker\'s Guide to the Galaxy,  Douglas Adams=
        Tuesdays with Morrie,  Mitch Albom= God\'s Little Acre,  Erskine Caldwell= Follow Your Heart,  Susanna Tamaro=
        The Outsiders,  S.E. Hinton= Charlie and the Chocolate Factory,  Roald Dahl= Norwegian Wood,  Haruki Murakami=
        Peyton Place,  Grace Metalious= Dune,  Frank Herbert= The Plague,  Albert Camus= No Longer Human,  Osamu Dazai=
        The Naked Ape: A Zoologist\'s Study of the Human Animal,  Desmond Morris=
        The Bridges of Madison County,  Robert James Waller= Man\'s Search for Meaning,  Viktor E. Frankl=
        The Divine Comedy,  Dante Alighieri= Things Fall Apart,  Chinua Achebe= The Exorcist,  William Peter Blatty=
        The Gruffalo,  Julia Donaldson= Catch-22,  Joseph Heller= Eye of the Needle,  Ken Follett
    </string>
    <string name="book_titles_horror"> All Heads Turn When the Hunt Goes By, John Farris=
        All Heads Turn When the Hunt Goes By, John Farris= I Am Legend, Richard Matheson=
        And the Darkness Falls, Boris Karloff= The Anubis Gates, Tim Powers= The Arabian Nightmare, Robert Irwin=
        The Black Spider, Jeremias Gotthelf= Burnt Offerings, Robert Marasco=
        The Cadaver of Gideon Wyck, Alexander Laing= Caleb Williams or Things as They Are, William Godwin=
        The Cellar, Richard Laymon= The Ceremonies, T. E. D. Klein= The collected works of Ambrose Bierce, Ambrose Bierce=
        The Compleat Werewolf and Other Stories of Fantasy and Science Fiction, Anthony Boucher=
        The Confidence-Man: His Masquerade, Herman Melville= Conjure Wife, Fritz Leiber= The Crystal World, J.G. Ballard=
        The Damnation Game, Clive Barker= The dark country,
        Dennis Etchison= Dark Feasts: The World of Ramsey Campbell, Ramsey Campbell=
        The Dark Tower and Other Stories, C. S. Lewis= Deathbird Stories, Harlan Ellison= Deliver Me From Eva, Paul Bailey=
        Doctor Faustus, Christopher Marlowe= Dracula, Bram Stoker= The Exorcist, William Peter Blatty=
        Falling Angel, William Hjortsberg= Frankenstein, Mary Shelley= Ghost Stories of an Antiquary, M. R. James=
        Ghost Story, Peter Straub= The Green Man, Kingsley Amis= Grendel, John Gardner=
        The Haunting of Hill House, Shirley Jackson= Hawksmoor, Peter Ackroyd= Heart of Darkness, Joseph Conrad=
        Horror Horn, E. F. Benson= The House of Souls, Arthur Machen= The House on the Borderland, William Hope Hodgson=
        In a Lonely Place, Karl Edward Wagner= The Island of Dr. Moreau, H. G. Wells= The Jewel of Seven Stars, Bram Stoker=
        John Silence, Physician Extraordinary, Algernon Blackwood= Johnny Got His Gun, Dalton Trumbo= The Keep, F. Paul Wilson=
        The King in Yellow, Robert W. Chambers= The Land of Laughs, Jonathan Carroll= The Last Bouquet, Marjorie Bowen=
        Lord of the Flies, William Golding= The Lurker at the Threshold, H. P. Lovecraft=
        The Lurking Fear and Other Stories, H. P. Lovecraft= Macbeth, William Shakespeare=
        The Man Who Was Thursday, G. K. Chesterton= Medusa, E. H. Visiak= Melmoth the Wanderer, Charles Robert Maturin=
        The Monk, Matthew Lewis= The Mouse on the Mile, Stephen King= Murgunstrumm and Others, Hugh B. Cave=
        Mythago Wood, Robert Holdstock= A Nest of Nightmares, Lisa Tuttle=
        Night Has a Thousand Eyes: a novel of suspense, George Hopley= Nine Horrors and a Dream, Joseph Payne Brennan=
        Northanger Abbey, Jane Austen= The October Country, Ray Bradbury= Out of Space and Time, Clark Ashton Smith=
        The Painted Bird, Jerzy Kosiński= The Pet, Charles L. Grant=
        The Private Memoirs and Confessions of a Justified Sinner, James Hogg= Psycho, Robert Bloch=
        Quatermass and the Pit, Nigel Kneale= Red Dragon, Thomas Harris=
        The Second Century of Creepy Stories, Sir Hugh Walpole= She, H. Rider Haggard= The Sheep Look Up, John Brunner=
        The Shining, Stephen King= The Sleeping and The Dead, August Derleth= Song of Kali, Dan Simmons=
        The Sound of His Horn, Sarban= The Strange Case of Dr. Jekyll and Mr. Hyde, Robert Louis Stevenson=
        Sub Rosa: Strange Tales, Robert Aickman= Swan Song, Robert McCammon= Sweetheart Sweetheart, Bernard Taylor=
        Tales of Hoffmann, E. T. A. Hoffmann= Tales of Mystery and Imagination, Edgar Allan Poe=
        The Three Stigmata of Palmer Eldritch, Philip K. Dick= The Totem, David Morrell=
        The Track of the Cat, Walter Van Tilburg Clark= The Trial, Franz Kafka= The Turn of the Screw, Henry James=
        Twice-Told Tales, Nathaniel Hawthorne= Uncle Silas: A Tale of Bartram-Haugh, J. Sheridan Le Fanu=
        A Voyage to Arcturus, David Lindsay= The Wandering Jew, Volume I, Eugène Sue= The Wasp Factory, Iain Banks=
        The Werewolf of Paris, Guy Endore= The White Devil, John Webster= Who Made Stevie Crye?, Michael Bishop=
        Widdershins, Oliver Onions= The Wolfen, Whitley Strieber= Worse Things Waiting, Manly Wade Wellman=
    </string>
</resources>