<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.julia.read_a_lot.StartActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="406dp"
        android:layout_height="416dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/logo"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintTop_toTopOf="@+id/textLogoView"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/explanationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:text="@string/explanation"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/logoView"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintLeft_toLeftOf="@+id/logoView"
        app:layout_constraintRight_toRightOf="@+id/logoView"
        app:layout_constraintTop_toTopOf="@+id/logoView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/backgroundButton"
        android:onClick="goToGame"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView"
        app:layout_constraintVertical_bias="0.733" />

    <ImageView
        android:id="@+id/textLogoView"
        android:layout_width="335dp"
        android:layout_height="114dp"
        app:srcCompat="@drawable/textlogo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/logoView"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.022"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/logo" />

</android.support.constraint.ConstraintLayout>
